# bozWebsockets

./: .gitignore  CMakeLists.txt  README.md  project.config  tools.cmake
include/: bozWebsocketClient.h
package/: package.cmake
src/: CMakeLists.txt
src/client/: CMakeLists.txt  bozWsCliAccess_p.cpp  bozWsCliConnect_p.cpp  bozWsCliRead_p.cpp  bozWsCliWrite_p.cpp  bozWsClient_p.cpp  bozWsClient_p.h  bozWsConnect.cpp  bozWsConstructor.cpp  bozWsRead.cpp  bozWsThread.cpp  bozWsThread.h  bozWsWrite.cpp
test/: CMakeLists.txt
test/client/: CMakeLists.txt  main.cpp  main.h
